add options for controlling auditor concurrency and bytes_per_second

--- a/templates/object-server.conf.erb
+++ b/templates/object-server.conf.erb
@@ -35,3 +35,5 @@ concurrency = <%= @replicator_concurrency %>
 concurrency = <%= @updater_concurrency %>
 
 [object-auditor]
+bytes_per_second = <%= @auditor_bytes_per_second %>
+concurrency = <%= @auditor_concurrency %>
