--- a/templates/object-server.conf.erb
+++ b/templates/object-server.conf.erb
@@ -36,4 +36,5 @@ concurrency = <%= @updater_concurrency %>
 
 [object-auditor]
 bytes_per_second = <%= @auditor_bytes_per_second %>
+files_per_second = <%= @auditor_files_per_second %>
 concurrency = <%= @auditor_concurrency %>
