added object_post_as_copy to proxy config

--- a/templates/proxy-server.conf.erb
+++ b/templates/proxy-server.conf.erb
@@ -45,3 +45,4 @@ write_affinity_node_count = <%= @write_affinity_node_count -%>
 <% if @node_timeout -%>
 node_timeout = <%= @node_timeout -%>
 <% end %>
+object_post_as_copy = <%= @object_post_as_copy.to_s -%>
