Added object_post_as_copy into the proxy class parameters and ERB template. Added the auditor bytes_per_second, files_per_second and concurrency into the storage server parameters and ERB template. This is a workaround for issues with the concat and config type functionality not working well together.
Conflicts:
	manifests/storage/server.pp

--- a/templates/object-server.conf.erb
+++ b/templates/object-server.conf.erb
@@ -42,3 +42,6 @@ concurrency = <%= @replicator_concurrency %>
 concurrency = <%= @updater_concurrency %>
 
 [object-auditor]
+bytes_per_second = <%= @auditor_bytes_per_second %>
+files_per_second = <%= @auditor_files_per_second %>
+concurrency = <%= @auditor_concurrency %>
