--- a/templates/proxy-server.conf.erb
+++ b/templates/proxy-server.conf.erb
@@ -43,6 +43,7 @@ set log_address = <%= @log_address %>
 log_handoffs = <%= @log_handoffs %>
 allow_account_management = <%= @allow_account_management %>
 account_autocreate = <%= @account_autocreate %>
+object_post_as_copy = <%= @object_post_as_copy -%>
 <% if @read_affinity -%>
 sorting_method = affinity
 read_affinity = <%= @read_affinity %>
